2019-02-27  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: better error message in case of wrong intermediate certificate

2019-02-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Better error message in case of OCSP failure

2019-02-08  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Check the readability of the certificate file

2019-02-01  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: applied patch for the SSLlabs warning

2019-01-16  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: replaced echo -e with printf

2018-12-24  Matteo Corti  <corti@macmini.home>

	* check_ssl_cert: Better output in case of errors while using SNI

2018-12-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Better help about IMAP IMAPS POP3 and POP3S
	* check_ssl_cert: Support for SNI and SSL Labs

2018-12-11  Matteo Corti  <corti@macmini.home>

	* check_ssl_cert: Differentiate IMAP with STARTTLS on port 143 and IMAPS on 993
	* check_ssl_cert: Fixed a vulnerability in the parsing of the certificate issuer

2018-11-07  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed a problem with IMAP on port 993
	* check_ssl_cert: fixed a problem with newlines in the HTTP request

2018-11-05  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: CA file and directory support

2018-10-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed the HTTP request string

2018-10-18  eimamagi  <https://github.com/eimamagi>

	* check_ssl_cert: Allow to specify a client certificate key

2018-10-15  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (exec_with_timeout): fixed the check on the the return value

2018-08-10  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: disabling OCSP checks if no OCSP host is found

2018-07-20  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Applied a patch from Markus Frosch to fix the cleanup of temporary files

2018-07-01  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: do not trap on EXIT