@@ -1,5 +1,9 @@
 2019-02-27  Matteo Corti  <matteo@corti.li>
 
+	* test/unit_tests.sh (testMultipleAltNamesFailTwo): removed outdated tests
+
+2019-02-27  Matteo Corti  <matteo@corti.li>
+
 	* check_ssl_cert: better error message in case of wrong intermediate certificate
 
 2019-02-19  Matteo Corti  <matteo@corti.li>
